fix z-index bs3

--- a/media/css/cresenity/cresenity.main.bs3.css
+++ b/media/css/cresenity/cresenity.main.bs3.css
@@ -843,7 +843,7 @@ table.responsive {
 }
 
 .navbar-static-side {
-    z-index: 1020;
+    z-index: 1040;
     position: absolute;
     width: 220px;
     border-color: #2f4050;
